agregamos los archivos base

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,11 @@
 </head>
 <body>
  <h1>página de Contactos</h1>
- <br>  
+ <br> 
+ <a href="./">
+    <img src="assets/brand/Brand Desktop.svg" 
+    alt="Logotipo Fito">
+ </a> 
  <nav>
     <a href="about.html">acerca de</a>
     <a href="projects.html">proyectos</a>
