--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
 <body>
  <h1>página de Acerca De</h1>
  <br>  
+ <a href="./">
+    <img src="assets/brand/Brand Desktop.svg" 
+    alt="Logotipo Fito">
+ </a>
  <nav>
     <a href="about.html">acerca de</a>
     <a href="projects.html">proyectos</a>
