--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
     <!--stylesheet end-->
 </head>
 <body>
+    <header class="header">
+    </header>
+        <div class="hero">
+            <div class="hero-wrapper">
+                <div class="hero-content">
+                    <h1 class="hero-title">diseñador Multimedia</h1>
+                    <p class="hero-paragraph">Hola soy fito y te aydo
+                        a resolver problemas de 
+                        comunicasión visual e ilustración
+                    </p>
+                    <a class="hero-button" href="#">Whatapp</a>
+                    <p>quieres los mejores dibujos e ilustraciones
+                        a un estilo cartoon?, aqui me tienes jeje
+                    </p>
+                </div>
+                <div class="hero-porfile">
+                    <img class="hero-image" src="" alt="Fotografía de Perfil Fito">
+                </div>
+            </div>
+        </div>
+    
  <h1>página de inicio</h1>
  <br>  
  <a href="./">
