--- a/index.html
+++ b/index.html
@@ -15,37 +15,29 @@
     <!--stylesheet end-->
 </head>
 <body>
-    <header class="header">
-    </header>
-        <div class="hero">
-            <div class="hero-wrapper">
-                <div class="hero-content">
-                    <h1 class="hero-title">diseñador Multimedia</h1>
-                    <p class="hero-paragraph">Hola soy fito y te aydo
-                        a resolver problemas de 
-                        comunicasión visual e ilustración
-                    </p>
-                    <a class="hero-button" href="#">Whatapp</a>
-                    <p>quieres los mejores dibujos e ilustraciones
-                        a un estilo cartoon?, aqui me tienes jeje
-                    </p>
-                </div>
-                <div class="hero-porfile">
-                    <img class="hero-image" src="" alt="Fotografía de Perfil Fito">
-                </div>
-            </div>
-        </div>
-    
- <h1>página de inicio</h1>
- <br>  
- <a href="./">
-    <img src="assets/brand/Brand Desktop.svg" 
-    alt="Logotipo Fito">
- </a>
- <nav>
-    <a href="about.html">acerca de</a>
-    <a href="projects.html">proyectos</a>
-    <a href="contact.html">contactos</a>
- </nav> 
+    <h1>Página de Inicio</h1>
+	<br>
+	<a href="./">
+		<img src="assets/brand/Brand Desktop.svg" alt="Logotipo Fito">
+	</a>
+	<nav>
+		<a href="about.html">Acerca de</a>
+		<a href="projects.html">Proyectos</a>
+		<a href="contact.html">Contacto</a>
+	</nav>
+	<header class="header">
+		<div class="header-wrapper">
+			<a class="header-brand" href="./">
+				<img src="assets/brand/Brand Desktop.svg" alt="Logotipo Fito">
+			</a>
+			<nav class="header-nav">
+				<a class="header-nav-item" href="about.html">acerca de</a>
+				<a class="header-nav-item"href="projects.html">proyectos</a>
+				<a class="header-nav-item"href="contact.html">contacto</a>
+				<a class="header-nav-button"href="#">whatsapp</a>
+			</nav>
+		</div>
+	</header>
+</body>
 </body>
 </html>
