--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio portafolio Fito</title>
     <!--google fonts start-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@400;700&display=swap"
+        rel="stylesheet">
     <!--google fonts end-->
     <!--stylesheet start-->
     <link rel="stylesheet" href="./css/resset.css">
     <link rel="stylesheet" href="./css/style.css">
     <!--stylesheet end-->
 </head>
+
 <body>
- <h1>página de Proyectos</h1>
- <br>  
- <a href="./">
-    <img src="assets/brand/Brand Desktop.svg" 
-    alt="Logotipo Fito">
- </a>
- <nav>
-    <a href="about.html">acerca de</a>
-    <a href="projects.html">proyectos</a>
-    <a href="contact.html">contactos</a>
- </nav> 
+    <h1>Página de Proyectos</h1>
+	<br>
+	<a href="./">
+		<img src="assets/brand/Brand Desktop.svg" alt="Logotipo Fito">
+	</a>
+	<nav>
+		<a href="about.html">Acerca de</a>
+		<a href="projects.html">Proyectos</a>
+		<a href="contact.html">Contacto</a>
+	</nav>
+	<header class="header">
+		<div class="header-wrapper">
+			<a class="header-brand" href="./">
+				<img src="assets/brand/Brand Desktop.svg" alt="Logotipo Fito">
+			</a>
+			<nav class="header-nav">
+				<a class="header-nav-item" href="about.html">acerca de</a>
+				<a class="header-nav-item"href="projects.html">proyectos</a>
+				<a class="header-nav-item"href="contact.html">contacto</a>
+				<a class="header-nav-button"href="#">whatsapp</a>
+			</nav>
+		</div>
+	</header>
 </body>
+
 </html>
