--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio portafolio Fito</title>
-    <!--google fonts start-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
-    <!--google fonts end-->
-    <!--stylesheet start-->
-    <link rel="stylesheet" href="./css/resset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <!--stylesheet end-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>inicio portafolio Fito</title>
+	<!--google fonts start-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@400;700&display=swap"
+		rel="stylesheet">
+	<!--google fonts end-->
+	<!--stylesheet start-->
+	<link rel="stylesheet" href="./css/resset.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<!--stylesheet end-->
 </head>
+
 <body>
-    <h1>Página de Inicio</h1>
+	<h1>Página de Inicio</h1>
 	<br>
 	<a href="./">
 		<img src="assets/brand/Brand Desktop.svg" alt="Logotipo Fito">
@@ -32,12 +36,73 @@
 			</a>
 			<nav class="header-nav">
 				<a class="header-nav-item" href="about.html">acerca de</a>
-				<a class="header-nav-item"href="projects.html">proyectos</a>
-				<a class="header-nav-item"href="contact.html">contacto</a>
-				<a class="header-nav-button"href="#">whatsapp</a>
+				<a class="header-nav-item" href="projects.html">proyectos</a>
+				<a class="header-nav-item" href="contact.html">contacto</a>
+				<a class="header-nav-button" href="#">whatsapp</a>
 			</nav>
 		</div>
 	</header>
+
+
+	<div class="hero-wrapper">
+		<div class="hero-content">
+			<h1 class="hero-title">diseñador multimedia</h1>
+			<p class="hero-paragraph">Hola soy Fito,¿interesado en el estio Cartoon y divertido? Yo soy tu mejor
+				opcion,ven y comunicate conmigo</p>
+			<a class="hero-button" href="#">whatsapp</a>
+			<div class="hero-profile">
+				<img class="hero-image" src="assets/brand/Fito_Foto_Perfil.png" alt="Fotografía de Perfil Fito">
+			</div>
+		</div>
+
+	</div>
+	<div class="hero-profile">
+
+		<div class="hero">
+			<div class="hero-wrapper">
+				<div class="hero-content">
+					<h1 class="hero-title">diseñador multimedia</h1>
+				</div>
+			</div>
+		</div>
+
+
+		<!-- Contenido principal de la página -->
+		<main class="main">
+			<!-- Encajonamos las secciones -->
+			<div class="main-wrapper">
+				<!-- Sección de Servicios -->
+				<section class="services">
+					<div class="services-content">
+						<h2 class="services-title">mi experiencia</h2>
+						<p class="services-paragraph">Durante 10 años me he desarrollado y especializado en los
+							siguientes campos creativos.</p>
+					</div>
+					<div class="services-cards">
+						<div class="services-item">
+							<img class="services-image" src="" alt="Icono de Marca Gráfica">
+							<h3 class="services-subtitle">Marca Gráfica</h3>
+							<p class="services-description">Todo emprendimento requiere de un elemento grafíco que lo
+								identifiquen y diferencie del resto</p>
+						</div>
+						<div class="services-item">
+							<img class="services-image" src="" alt="Icono de Edición">
+							<h3 class="services-subtitle">Edicion</h3>
+							<p class="services-description">Las animacion es algo que se fundamenta día a dia y con lo
+								que puedo hacer es para editar videos</p>
+						</div>
+						<div class="services-item">
+							<img class="services-image" src="" alt="Icono de Comisiones">
+							<h3 class="services-subtitle">Comisiones</h3>
+							<p class="services-description">con mi estilo de dibujo puedo llamar tu atencion y querras
+								una obra de mi en tus negocios o lugares favoritos</p>
+						</div>
+					</div>
+				</section>
+				<!-- Vendrán las demás secciones... -->
+			</div>
+		</main>
+
 </body>
-</body>
+
 </html>
